# hatrack

./: .clang-format  .gitignore  LICENSE.txt  Makefile  Makefile.am  README  README.md  automake.sh  ballcap.c  ballcap.h  config.h  configure.ac  counters.c  counters.h  debug.c  debug.h  debugbuffer.c  debugbuffer.h  duncecap.c  duncecap.h  hash.h  hatomic.h  hatrack_common.c  hatrack_common.h  hatvtable.h  hihat-a.c  hihat.c  hihat.h  hihat1.c  hihat1.h  hihat1a.c  hihat64.c  hihat64.h  hihat_a.c  lohat-a.c  lohat-a.h  lohat-b.c  lohat-b.h  lohat.c  lohat.h  (+42 more)
autotools/: compile
bonus/: hatring.c  hq.c  llstack.c  logring.c  queue.c  stack.c
docs/: README.md  capqs.md  dicts.md  hatstack.md  migration.md  queue.md  ring.md  sets.md  writeup.docx
examples/: README.md  array.c  basic.c  hashable.c  logringex.c  old_queue_ex.c  qperf.c  qtest.c  queue.c  ring.c  set1.c  stackex.c  test_queues.c
include/: ballcap.h  counters.h  debug.h  duncecap.h  hash.h  hatrack.h  hatrack_config.h  hihat.h  lohat-a.h  lohat_common.h  mmm.h  oldhat.h  refhat.h  testhat.h  witchhat.h  woolhat.h
include/hatrack/: ballcap.h  capq.h  counters.h  crown.h  debug.h  dict.h  duncecap.h  flexarray.h  gate.h  hash.h  hatomic.h  hatrack_common.h  hatrack_config.h  hatring.h  hatvtable.h  helpmanager.h  hihat.h  hq.h  llstack.h  logring.h  lohat-a.h  lohat.h  lohat_common.h  mmm.h  newshat.h  oldhat.h  q64.h  queue.h  refhat.h  set.h  stack.h  swimcap.h  tiara.h  tophat.h  vector.h  witchhat.h  woolhat.h
quark/: aarch64.s  build.sh  quark.c  x86_64.s
scripts/: config-debug  config-opt
src/: README.md  ballcap.c  config.h  counters.c  counters.h  crown.c  debug.c  debug.h  dict.c  duncecap.c  hatrack_common.c  hatrack_dict.c  hatvtable.h  hihat-a.c  hihat.c  lohat-a.c  lohat.c  lohat_common.h  mmm.c  mmm.h  newshat.c  newshat.h  oldhat.c  refhat.c  set.c  swimcap.c  test.c  testhat.c  testhat.h  tiara.c  tophat.c  tophat.h  witchhat.c  woolhat.c  xxhash.h
src/array/: flexarray.c  vector.c
src/hash/: ballcap.c  crown.c  dict.c  duncecap.c  hihat-a.c  hihat.c  lohat-a.c  lohat.c  newshat.c  oldhat.c  refhat.c  set.c  swimcap.c  tiara.c  tophat.c  witchhat.c  woolhat.c  xxhash.c
src/queue/: capq.c  debug.c  hatring.c  hq.c  llstack.c  logring.c  q64.c  queue.c  stack.c
src/support/: hatrack_common.c  helpmanager.c  mmm.c
tests/: README.md  config.c  default.c  functional.c  performance.c  rand.c  stress.c  test.c  testhat.c
